# SystemTask

./: README.md  build_all.sh
FIFO/: compile.sh  main_1  main_1.c  main_2  main_2.c
MessageQueue/: CMakeLists.txt
MessageQueue/client/: CMakeLists.txt  client.c
MessageQueue/global/: global.c  global.h
MessageQueue/server/: CMakeLists.txt  server.c
SemProg/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake
SemProg/inc/: core.h  log.h
SemProg/src/: core.c  log.c  main.c
SharedMem/: CMakeLists.txt  client.c  server.c
SharedMem/client/: CMakeLists.txt  client.c
SharedMem/global/: core.c  core.h  global.c  global.h  log.c
SharedMem/server/: CMakeLists.txt  server.c
test_project/: build.sh  commands.c  commands.h  global.h  main.c  testProject
test_project/helpers/: my_string.c  my_string.h
test_project/projects/1/: test_1.c  test_1.h
test_project/projects/2/: test_2.c  test_2.h
test_project/projects/3/: test_3.c  test_3.h
